# fastapi-backend-practice

./: README.md
backend/: main.py  pyproject.toml  requirements.txt  sockets.py
backend/app/api/v1/routes/: auth.py  chat.py  random.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: message.py  random_data.py  user.py
backend/app/utils/: api_error.py  api_response.py  helper_func.py  send_otp.py
nextjs-boilerplate/: package-lock.json  package.json  pnpm-lock.yaml
nextjs-boilerplate/src/app/: page.tsx
nextjs-boilerplate/src/app/api/login/: route.ts
nextjs-boilerplate/src/app/api/me/: route.ts
nextjs-boilerplate/src/app/api/messages/: route.ts
nextjs-boilerplate/src/app/api/mfa/enable/: route.ts
nextjs-boilerplate/src/app/api/signup/: route.ts
nextjs-boilerplate/src/app/mfa/enable/: page.tsx
nextjs-boilerplate/src/app/mfa/verify-login/: page.tsx
nextjs-boilerplate/src/components/: ChatForm.tsx  ChatMessage.tsx  LoginForm.tsx  SignupForm.tsx
nextjs-boilerplate/src/components/about/: landing.tsx
nextjs-boilerplate/src/components/common/Buttons/: button.tsx
nextjs-boilerplate/src/components/common/Forms/: form.tsx
nextjs-boilerplate/src/constants/: constants.ts
nextjs-boilerplate/src/db/: dbClient.ts
nextjs-boilerplate/src/handlers/: authHandler.ts  messagesHandler.ts
nextjs-boilerplate/src/models/: user.ts
nextjs-boilerplate/src/schemas/: user.ts
nextjs-boilerplate/src/socket/: socketClient.ts
nextjs-boilerplate/src/store/: zuStore.ts
nextjs-boilerplate/src/types/: index.ts  mongoTypes.ts
(+2 files in other folders)
